# simpledb

./: .continuerules  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DECISIONS.md  README.md  clippy.toml  package-lock.json  path-investigation-notes.md  pyproject.toml
.cargo/: config.toml
bench-data/: bench_table.tbl  field_catalog.tbl  table_catalog.tbl
benches/: README.md  benchmark_framework.rs  buffer_pool.rs  io_patterns.rs  simple_bench.rs
docs/: ROADMAP.md  WAL.md  arc_mutex_audit.md  async_io_and_queue_depth_plan.md  btree_buffer_locking_strategy.md  btree_concurrency_impl_plan.md  btree_concurrency_plan.md  btree_page_layout_plan.md  buffer_pool_benchmark_plan.md  buffer_pool_concurrency_plan.md  buffer_pool_perf_improvements.md  buffer_pool_thrashing_analysis.md  buffer_replacement_design.md  chat.md  compiler-warnings-cleanup.md  deadlock_handling.md  direct_io_migration_plan.md  direct_io_perf_testing.md  fm_positional_io_plan.md  index_macro_benchmark_plan.md  intra_query_parallelism.md  io_benchmark_plan.md  lock_granularity_refactor_notes.md  page_compile_time_polymorphism.md  performance_alignment_plan.md  raii_buffer_handles.md  read_write_handles.md  record_management.md  sql_concurrency_benchmarks.md  torn_write_protection_summary.md  transaction_session_refactor.md  type_system_and_serialization.md  var_len_tuple_plan.md  wal_view_integration.md
scripts/: compare_benchmarks.py  run_all_benchmarks.py  run_all_benchmarks.sh  run_regime_matrix.py
src/: benchmark_framework.rs  btree.rs  intrusive_dll.rs  main.rs  page.rs  parser.rs  test_utils.rs  (+1 more)
(+32 files in other folders)
