[package]
name = "simpledb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simpledb"
path = "src/bin/simpledb-cli.rs"

[profile.bench]
debug = 1

[[bench]]
name = "simple_bench"
harness = false

[[bench]]
name = "buffer_pool"
harness = false

[[bench]]
name = "io_patterns"
harness = false

[lib]
name = "simpledb"
path = "src/main.rs"

[dependencies]
