[package]
name = "simpledb"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simpledb"
path = "src/bin/simpledb-cli.rs"

[profile.bench]
debug = 1

[[bench]]
name = "simple_bench"
harness = false

[[bench]]
name = "buffer_pool"
harness = false

[[bench]]
name = "io_patterns"
harness = false

[lib]
name = "simpledb"
path = "src/main.rs"

[features]
default = ["replacement_lru", "page-4k"]
replacement_lru = []
replacement_clock = []
replacement_sieve = []

# Compile-time page size selection. Exactly one of these should be enabled per binary.
page-4k = []
page-8k = []
page-1m = []

# Enable direct I/O (O_DIRECT) for data files. WAL always uses buffered I/O.
# Linux-only in this phase. Default builds remain fully buffered.
direct-io = []

[dependencies]
libc = "0.2"
